no emoticon update

--- a/index.html
+++ b/index.html
@@ -301,17 +301,16 @@
         </div>
 
         <nav class="nav" aria-label="Menu">
-          <a class="active" href="#"><span>🏠</span> Home</a>
-          <a href="#"><span>📝</span> quotes</a>
-          <a href="#"><span>🇮🇩</span> language</a>
-          <a href="#"><span>😊</span> emotion</a>
+          <a class="active" href="#"> Home</a>
+          <a href="#"> quotes</a>
+          <a href="#"> language</a>
+          <a href="#"> emotion</a>
         </nav>
       </aside>
 
       <main class="main">
         <div class="topbar">
           <div class="search">
-            <span>🔎</span>
             <input id="q" placeholder="Search something..." />
           </div>
           <button class="btn" id="btnClear">Clear</button>
